--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,12 +1,17 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
+
+#DEVELOP
 db.server=localhost
 db.port=3307
 db.user=dev
 db.password=ax2
 db.database=cinema
-test.port=7777
-test.server=http://localhost/api
 
-
+#TEST
+dbtest.server=localhost
+dbtest.port=3307
+dbtest.user=dev
+dbtest.password=ax2
+dbtest.database=cinema_test
