--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         
         <!-- TODO: Add the URL to your own tomcat server. Used to deploy your WAR-file -->
 
-        <remote.server>http://157.230.21.103/manager/text</remote.server>
+        <remote.server>https://maltemagnussen.com</remote.server>
         
     </properties>
     
