--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -8,6 +8,8 @@ db.port=3307
 db.user=dev
 db.password=ax2
 db.database=cinema
+test.port=7777
+test.server=http://localhost/api
 
 #TEST
 dbtest.server=localhost
@@ -15,3 +17,5 @@ dbtest.port=3307
 dbtest.user=dev
 dbtest.password=ax2
 dbtest.database=cinema_test
+test.port=7777
+test.server=http://localhost/api
